# TickTask

./: .buildinfo  .dockerignore  .env.example  .env.prod.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: modules.doctree  ticktask.doctree  ticktask.migrations.doctree  ticktask.tests.doctree
.github/ISSUE_TEMPLATE/: feature.md  problem.md
.github/workflows/: deploy.yml  docs.yml  frontend.yml  python-package.yml
_sources/: index.rst.txt
_sources/source/: ticktask.migrations.rst.txt  ticktask.rst.txt
docs/: conf.py
docs/source/: modules.rst  ticktask.tests.rst
gui/: .env.example  Dockerfile  Dockerfile.prod  nginx.conf  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  vuetify.options.ts
gui/components/: AddSubTaskDialog.vue  AddTaskDialog.vue  CalendarTimeGrid.vue  EventDialog.vue  Header.vue  Home.vue  LeftMenu.vue  NoteDialog.vue  NoteGroupDialog.vue  TimeEntryDialog.vue
gui/composables/: useAuth.js  useCalendar.js  useDashboard.js  useNotes.js  useSettings.js  useTasks.js  useTheme.js  useToast.js
gui/layouts/: blank.vue  default.vue  defaultlogged.vue
gui/middleware/: auth.global.js  auth.js
source/: modules.html  ticktask.html  ticktask.migrations.html  ticktask.tests.html
ticktask/: __init__.py  admin.py  api.py  celery_app.py  manage.py  models.py  reports.py  services.py  settings.py  tasks.py  telegram.py
(+86 files in other folders)
