[project]
name = "ticktask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "django-ninja>=1.4.3",
]

[project.scripts]
utiv360 = "ticktask.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
