[project]
name = "ticktask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "django-ninja>=1.4.3",
    "django-ninja-jwt>=5.3.7",
    "flake8>=7.2.0",
    "pytest>=8.4.0",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
]

[project.scripts]
ticktask = "ticktask.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
